# multi-tenant-project

./: .env.example  .gitignore  DDD_ARCHITECTURE.md  DOCUMENT_PERMISSIONS_README.md  Dockerfile  FLUXO_ONBOARDING.md  MICROSERVICES_INTEGRATION.md  Makefile  PLAN_SYSTEM_EXAMPLE.md  RAG_PERMISSION_INTEGRATION.md  README.md  TROUBLESHOOTING.md  alembic.ini  combined_authorizatrion_with_line_numbers.txt  combined_user_with_line_numbers.txt  combined_with_line_numbers.txt  doc.md  docker-compose.yml  gemini.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_authorization_tests.py  run_iam_session_tests.py  setup-poetry.sh  setup.sh  test_profile_system.py  test_profile_system_standalone.py
alembic/: env.py
alembic/versions/: 055142b6d9c1_add_user_sessions_table.py  0db660442dab_add_roles_and_permissions_system.py  18ff0e616fb6_update_permission_table_schema_to_use_.py  2f2e4ef6cc4f_update_is_active_default_to_false.py  32a99bed3505_add_organizations_table_and_user_.py  360c80c57912_migrate_user_organization_roles_to_fk.py  68a863bfa6e3_initial_migration.py  6cca279fc8b6_rev1.py  a12a0a877ae3_initial_migration2.py  b57c06412a18_add_constraint_names_to_fix_circular_.py  c6391e8ce0a6_add_password_field_to_users_table.py  c6696e94e8cf_.py  ef1b72b2daf8_update_models_after_iam_merge.py
docs/: auth-quick-reference.md  authentication-system.md
scripts/: commands.py
src/: main.py
src/application/dtos/: auth_dto.py  organization_dto.py  session_dto.py  user_dto.py
src/application/services/: auth_service.py  authorization_service.py  jwt_service.py  user_service.py
src/application/use_cases/: auth_use_cases.py  organization_use_cases.py  session_use_cases.py  user_use_cases.py
src/authorization/application/: __init__.py
src/authorization/domain/: __init__.py
src/authorization/infrastructure/: __init__.py
src/authorization/presentation/: __init__.py  dependencies.py
src/documents/: __init__.py
src/documents/application/: __init__.py
src/documents/domain/: __init__.py
src/documents/infrastructure/: __init__.py  documents_unit_of_work.py
src/documents/presentation/: __init__.py  dependencies.py  routers.py
src/domain/entities/: authorization_context.py  organization.py  permission.py  resource_permission.py  role.py  user.py
src/domain/repositories/: base_repository.py  organization_repository.py  resource_permission_repository.py  resource_repository.py  unit_of_work.py  user_repository.py  user_session_repository.py
src/domain/value_objects/: password.py
src/iam/: __init__.py
src/iam/application/: __init__.py
src/iam/domain/: __init__.py
src/iam/examples/: document_permission_examples.py  profile_system_e2e_test.py
src/iam/infrastructure/: __init__.py  iam_unit_of_work.py
src/iam/presentation/: __init__.py  authorization_routers.py  dependencies.py  routers.py  (+2 more)
src/orchestration/: __init__.py
src/user/: __init__.py
tests/: README.md  README_IAM_SESSION_VALIDATION_TESTS.md  conftest.py  test_example.py
tests/authorization/: __init__.py
tests/factories/: organization_factory.py  permission_factory.py  role_factory.py  session_factory.py  user_factory.py  user_organization_role_factory.py
tests/fixtures/: auth_fixtures.py
tests/integration/: test_organization_repository_integration.py
tests/unit/: test_organization_entity_integration.py
tests/user/: __init__.py
(+497 files in other folders)
