[tool.poetry]
name = "fastapi-ddd-project"
version = "0.1.0"
description = "FastAPI project with Domain Driven Design, SQLAlchemy and PostgreSQL"
authors = ["User <user@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "iam", from = "src" },
    { include = "documents", from = "src" },
    { include = "plans", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.116.0"}
sqlalchemy = "^2.0.41"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
email-validator = "^2.0.0"
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
faker = "^37.4.0"
factory-boy = "^3.3.3"
ruff = "^0.12.1"
requests = "^2.32.4"

[tool.poetry.scripts]
dev = "scripts.commands:dev"
start = "scripts.commands:start"
migrate = "scripts.commands:migrate"
migration = "scripts.commands:migration"
test = "scripts.commands:test"
format = "scripts.commands:format_code"
lint = "scripts.commands:lint"
check = "scripts.commands:check_env"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
